# serializer version: 1
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_battery_health_problem-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.enphase_battery_system_battery_health_problem',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery Health Problem',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:check-circle',
    'original_name': 'Battery Health Problem',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'healthy',
    'unique_id': 'enphasebatterytestentry01_healthy',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_battery_health_problem-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Enphase Battery System Battery Health Problem',
      'icon': 'mdi:check-circle',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.enphase_battery_system_battery_health_problem',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_envoy_connected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.enphase_battery_system_envoy_connected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Envoy Connected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': 'mdi:router-wireless',
    'original_name': 'Envoy Connected',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'envoy_connected',
    'unique_id': 'enphasebatterytestentry01_envoy_connected',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_envoy_connected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Enphase Battery System Envoy Connected',
      'icon': 'mdi:router-wireless',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.enphase_battery_system_envoy_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_grid_connected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.enphase_battery_system_grid_connected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid Connected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': 'mdi:transmission-tower',
    'original_name': 'Grid Connected',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'grid_tied',
    'unique_id': 'enphasebatterytestentry01_grid_tied',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[binary_sensor.enphase_battery_system_grid_connected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Enphase Battery System Grid Connected',
      'icon': 'mdi:transmission-tower',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.enphase_battery_system_grid_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities_snapshot[number.enphase_battery_system_battery_reserve_percentage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 25,
      'min': 5,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.enphase_battery_system_battery_reserve_percentage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery Reserve Percentage',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:battery-alert',
    'original_name': 'Battery Reserve Percentage',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_reserve',
    'unique_id': 'enphasebatterytestentry01_very_low_soc',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities_snapshot[number.enphase_battery_system_battery_reserve_percentage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Battery Reserve Percentage',
      'icon': 'mdi:battery-alert',
      'max': 25,
      'min': 5,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.enphase_battery_system_battery_reserve_percentage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities_snapshot[select.enphase_battery_system_battery_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'self_consumption',
        'savings',
        'backup',
        'expert',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.enphase_battery_system_battery_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery Mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:battery-sync',
    'original_name': 'Battery Mode',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_mode',
    'unique_id': 'enphasebatterytestentry01_battery_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[select.enphase_battery_system_battery_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Battery Mode',
      'icon': 'mdi:battery-sync',
      'options': list([
        'self_consumption',
        'savings',
        'backup',
        'expert',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.enphase_battery_system_battery_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'self_consumption',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_capacity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_capacity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Capacity',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY_STORAGE: 'energy_storage'>,
    'original_icon': 'mdi:battery-high',
    'original_name': 'Capacity',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_capacity',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_capacity',
    'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_capacity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy_storage',
      'friendly_name': 'Enphase Battery 0001 Capacity',
      'icon': 'mdi:battery-high',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_0001_capacity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5000',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:chip',
    'original_name': 'Firmware',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_firmware',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_firmware',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_firmware-state]
  None
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_grid_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'grid_tied',
        'grid_forming',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_grid_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:transmission-tower',
    'original_name': 'Grid State',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_grid_state',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_grid_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_grid_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Enphase Battery 0001 Grid State',
      'icon': 'mdi:transmission-tower',
      'options': list([
        'grid_tied',
        'grid_forming',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_0001_grid_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'grid_tied',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_max_cell_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_max_cell_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Max Cell Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-alert',
    'original_name': 'Max Cell Temperature',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_max_cell_temp',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_max_cell_temp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_max_cell_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Enphase Battery 0001 Max Cell Temperature',
      'icon': 'mdi:thermometer-alert',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_0001_max_cell_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_serial_number-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_serial_number',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Serial Number',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:identifier',
    'original_name': 'Serial Number',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_serial',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_serial',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_serial_number-state]
  None
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_state_of_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_0001_state_of_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State of Charge',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-70',
    'original_name': 'State of Charge',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_soc',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_soc',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_state_of_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Enphase Battery 0001 State of Charge',
      'icon': 'mdi:battery-70',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_0001_state_of_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_0001_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer',
    'original_name': 'Temperature',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'individual_temperature',
    'unique_id': 'enphasebatterytestentry01_battery_122140000001_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_0001_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Enphase Battery 0001 Temperature',
      'icon': 'mdi:thermometer',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_0001_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_available_energy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_available_energy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Available Energy',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': 'mdi:battery-heart-variant',
    'original_name': 'Available Energy',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_available_energy',
    'unique_id': 'enphasebatterytestentry01_available_energy',
    'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_available_energy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Enphase Battery System Available Energy',
      'icon': 'mdi:battery-heart-variant',
      'unit_of_measurement': <UnitOfEnergy.WATT_HOUR: 'Wh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_available_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4200',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_health-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_system_battery_health',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery Health',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:heart-pulse',
    'original_name': 'Battery Health',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_health',
    'unique_id': 'enphasebatterytestentry01_health',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_health-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Battery Health',
      'icon': 'mdi:heart-pulse',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_battery_health',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '98',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_battery_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery Power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': 'mdi:battery-charging',
    'original_name': 'Battery Power',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_power',
    'unique_id': 'enphasebatterytestentry01_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Enphase Battery System Battery Power',
      'icon': 'mdi:battery-charging',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_battery_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-450',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'charging',
        'discharging',
        'idle',
        'full',
        'empty',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_battery_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:battery-charging-80',
    'original_name': 'Battery State',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_state',
    'unique_id': 'enphasebatterytestentry01_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Enphase Battery System Battery State',
      'icon': 'mdi:battery-charging-80',
      'options': list([
        'charging',
        'discharging',
        'idle',
        'full',
        'empty',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_battery_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'charging',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_state_of_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_battery_state_of_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Battery State of Charge',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-70',
    'original_name': 'Battery State of Charge',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_soc',
    'unique_id': 'enphasebatterytestentry01_soc',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_battery_state_of_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Enphase Battery System Battery State of Charge',
      'icon': 'mdi:battery-70',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_battery_state_of_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_charge_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_charge_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charge Power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': 'mdi:battery-charging',
    'original_name': 'Charge Power',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_charge_power',
    'unique_id': 'enphasebatterytestentry01_charge_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_charge_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Enphase Battery System Charge Power',
      'icon': 'mdi:battery-charging',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_charge_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '450',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_consumption_last_24h-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_consumption_last_24h',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Consumption Last 24h',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:home-lightning-bolt',
    'original_name': 'Consumption Last 24h',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_consumption_24h',
    'unique_id': 'enphasebatterytestentry01_consumption_24h',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_consumption_last_24h-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Consumption Last 24h',
      'icon': 'mdi:home-lightning-bolt',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_consumption_last_24h',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_discharge_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_discharge_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Discharge Power',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': 'mdi:battery-arrow-down',
    'original_name': 'Discharge Power',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_discharge_power',
    'unique_id': 'enphasebatterytestentry01_discharge_power',
    'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_discharge_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'Enphase Battery System Discharge Power',
      'icon': 'mdi:battery-arrow-down',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_discharge_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_energy_charged_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_energy_charged_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Energy Charged Today',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': 'mdi:battery-plus',
    'original_name': 'Energy Charged Today',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_energy_charged',
    'unique_id': 'enphasebatterytestentry01_energy_charged_today',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_energy_charged_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Enphase Battery System Energy Charged Today',
      'icon': 'mdi:battery-plus',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_energy_charged_today',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_energy_discharged_today-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_energy_discharged_today',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Energy Discharged Today',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': 'mdi:battery-minus',
    'original_name': 'Energy Discharged Today',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_energy_discharged',
    'unique_id': 'enphasebatterytestentry01_energy_discharged_today',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_energy_discharged_today-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'Enphase Battery System Energy Discharged Today',
      'icon': 'mdi:battery-minus',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_energy_discharged_today',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_envoy_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_system_envoy_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Envoy Firmware',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:chip',
    'original_name': 'Envoy Firmware',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'envoy_firmware',
    'unique_id': 'enphasebatterytestentry01_envoy_firmware',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_envoy_firmware-state]
  None
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_envoy_serial_number-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_system_envoy_serial_number',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Envoy Serial Number',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:identifier',
    'original_name': 'Envoy Serial Number',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'envoy_serial',
    'unique_id': 'enphasebatterytestentry01_envoy_serial',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_envoy_serial_number-state]
  None
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_estimated_backup_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.enphase_battery_system_estimated_backup_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Estimated Backup Time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:clock-outline',
    'original_name': 'Estimated Backup Time',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_backup_time',
    'unique_id': 'enphasebatterytestentry01_backup_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_estimated_backup_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Estimated Backup Time',
      'icon': 'mdi:clock-outline',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_estimated_backup_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '560',
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_grid_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'grid_tied',
        'grid_forming',
        'unknown',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.enphase_battery_system_grid_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Grid Mode',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': 'mdi:transmission-tower',
    'original_name': 'Grid Mode',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'battery_grid_mode',
    'unique_id': 'enphasebatterytestentry01_grid_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[sensor.enphase_battery_system_grid_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Enphase Battery System Grid Mode',
      'icon': 'mdi:transmission-tower',
      'options': list([
        'grid_tied',
        'grid_forming',
        'unknown',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.enphase_battery_system_grid_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'grid_tied',
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_allow_discharge_to_grid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.enphase_battery_system_allow_discharge_to_grid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Allow Discharge To Grid',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:transmission-tower-export',
    'original_name': 'Allow Discharge To Grid',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'discharge_to_grid',
    'unique_id': 'enphasebatterytestentry01_discharge_to_grid',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_allow_discharge_to_grid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Allow Discharge To Grid',
      'icon': 'mdi:transmission-tower-export',
    }),
    'context': <ANY>,
    'entity_id': 'switch.enphase_battery_system_allow_discharge_to_grid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_charge_from_grid-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.enphase_battery_system_charge_from_grid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charge From Grid',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:transmission-tower-import',
    'original_name': 'Charge From Grid',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge_from_grid',
    'unique_id': 'enphasebatterytestentry01_charge_from_grid',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_charge_from_grid-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Charge From Grid',
      'icon': 'mdi:transmission-tower-import',
    }),
    'context': <ANY>,
    'entity_id': 'switch.enphase_battery_system_charge_from_grid',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_limit_battery_discharge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.enphase_battery_system_limit_battery_discharge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Limit Battery Discharge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:battery-lock',
    'original_name': 'Limit Battery Discharge',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'reserve_battery_discharge',
    'unique_id': 'enphasebatterytestentry01_reserve_battery_discharge',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_limit_battery_discharge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System Limit Battery Discharge',
      'icon': 'mdi:battery-lock',
    }),
    'context': <ANY>,
    'entity_id': 'switch.enphase_battery_system_limit_battery_discharge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_powermatch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.enphase_battery_system_powermatch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PowerMatch',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:sine-wave',
    'original_name': 'PowerMatch',
    'platform': 'enphase_battery',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power_match',
    'unique_id': 'enphasebatterytestentry01_power_match',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities_snapshot[switch.enphase_battery_system_powermatch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Enphase Battery System PowerMatch',
      'icon': 'mdi:sine-wave',
    }),
    'context': <ANY>,
    'entity_id': 'switch.enphase_battery_system_powermatch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
